Remove example
